footer content created

--- a/subaa.html
+++ b/subaa.html
@@ -526,8 +526,8 @@
                             <p>Date: 17 May, 2022</p>
                         </div>
                         <div class="content">
-                            <button>Trade</button>
-                            <h1>how to get trade licence easily in india?</h1>
+                            <button>eating house licence</button>
+                            <h1>delhi police eating house licence: documentation and pr...</h1>
                             <p>read more...</p>
                         </div>
                     </div>
@@ -539,14 +539,14 @@
                     <span></span>
                     <div class="info">
                         <div class="header">
-                            <img src="./assets/images/photo-6.jpg" alt="">
-                            <h3>Pankaj Tyagi</h3>
+                            <img src="./assets/images/photo-5.jpg" alt="">
+                            <h3>Shambhavi Suyesha</h3>
                             <h4>|</h4>
                             <p>Date: 17 May, 2022</p>
                         </div>
                         <div class="content">
-                            <button>Trade</button>
-                            <h1>how to get trade licence easily in india?</h1>
+                            <button>waste management</button>
+                            <h1>e-waste auction in india</h1>
                             <p>read more...</p>
                         </div>
                     </div>
@@ -558,14 +558,14 @@
                     <span></span>
                     <div class="info">
                         <div class="header">
-                            <img src="./assets/images/photo-6.jpg" alt="">
-                            <h3>Pankaj Tyagi</h3>
+                            <img src="./assets/images/photo-5.jpg" alt="">
+                            <h3>Shambhavi Suyesha </h3>
                             <h4>|</h4>
                             <p>Date: 17 May, 2022</p>
                         </div>
                         <div class="content">
-                            <button>Trade</button>
-                            <h1>how to get trade licence easily in india?</h1>
+                            <button>pollution control board</button>
+                            <h1>CBCP producer responsibility organization</h1>
                             <p>read more...</p>
                         </div>
                     </div>
@@ -575,7 +575,117 @@
     </section>
 
 
-     
+     <section>
+         <div class="button">
+             <button>read all articles</button>
+         </div>
+     </section>
+
+
+    <section>
+        <div class="newsletter">
+            <div class="news">
+                <h1>Transform your Business. Subscribe our Newsletter.</h1>
+            </div>
+            <div class="email">
+                <input type="text" placeholder="Enter Your Email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="footer">
+            <div class="footer-flex">
+                <div class="flex">
+                    <h1>Social</h1>
+                    <ul>
+                        <li><i class="fa-brands fa-facebook-f"></i>/Corpbiz</li>
+                        <li><i class="fa-brands fa-twitter"></i>/Corpbiz</li>
+                        <li><i class="fa-brands fa-instagram"></i>/Corpbiz</li>
+                        <li><i class="fa-brands fa-linkedin-in"></i>/Corpiz</li>
+                        <li><i class="fa-brands fa-youtube"></i>/Corpiz</li>
+                    </ul>
+                </div>
+                <div class="flex">
+                    <h1>start a business</h1>
+                    <ul>
+                        <li>private limited company registration</li>
+                        <li>limited liability partnership</li>
+                        <li>public limited company registragion</li>
+                        <li>one person company registration</li>
+                        <li>partnership firm registragion</li>
+                        <li>sole proprietorship registration</li>
+                        <li>nidhi company registration</li>
+                    </ul>
+                </div>
+                <div class="flex">
+                    <h1>ngo & ipr</h1>
+                    <ul>
+                        <li>NGO registrarion</li>
+                        <li>trademark registration</li>
+                        <li>copyright registration</li>
+                        <li>patent registrarion</li>
+                        <li>trademark objection</li>
+                        <li>trademark assignment</li>
+                        <li>80G and 12A registragion</li>
+                        <li>section 8 company registragion</li>
+                    </ul>
+                </div>
+                <div class="flex">
+                    <h1>tax & financial</h1>
+                    <ul>
+                        <li>GST registragion</li>
+                        <li>GST return filling</li>
+                        <li>TDS return filling</li>
+                        <li>professional tax registration</li>
+                        <li>secretarial audit</li>
+                        <li>due diligence</li>
+                        <li>income tax return filling</li>
+                        <li>business plan</li>
+                    </ul>
+                </div>
+                <div class="flex">
+                    <h1>compliance</h1>
+                    <ul>
+                        <li>annual compliance of a pvt. ltd. company</li>
+                        <li>annual filing for LLP</li>
+                        <li>event based compliance in a company</li>
+                        <li>change in object clause</li>
+                        <li>appointmemt and registration of directors</li>
+                        <li>change in name clause</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom">
+                <ul>
+                    <li>about us</li>
+                    <li>pay now</li>
+                    <li>learning</li>
+                    <li>privacy policy</li>
+                    <li>refund policy</li>
+                    <li>terms & condition</li>
+                    <li>contact us</li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <h4>All Right Reserved © Enterslice Private Limited</h4>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="./styles/subaa.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
