--- a/suganya.html
+++ b/suganya.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
@@ -375,6 +376,79 @@
 
   <div class="partner">
     <h2>Our Network Partners</h2>
+  </div>
+
+
+
+  <div class="footer_content">
+    <div class="footer">
+      <div class="social_media">
+       <h3>SOCIAL</h3>
+       <i class="fa-brands fa-facebook-square"><span>/Corpbiz</span></i>
+       <i class="fa-brands fa-twitter-square"><span>/Corpbiz</span></i>
+       <i class="fa-brands fa-instagram-square"><span>/Corpbiz</span></i>
+       <i class="fa-brands fa-linkedin"><span>/Corpbiz</span></i>
+       <i class="fa-brands fa-youtube-square"><span>/Corpbiz</span></i>
+      </div>
+
+      <div class="start_business">
+        <h4>START A BUSINESS</h4>
+        <a href="">Private Limited Company Registration</a>
+        <a href="">Limited Liability Partnership</a>
+        <a href="">Public Limited Company Registration</a>
+        <a href="">One Person Company Registration</a>
+        <a href="">Partnership Firm Registration</a>
+        <a href="">Sole Proprietorship Registration</a>
+        <a href="">Nidhi Company Registration</a>
+      </div>
+
+      <div class="ngo">
+        <h4>NGO & IPR</h4>
+        <a href="">NGO Registration</a>
+        <a href="">Trademark Registration</a>
+        <a href="">Copyright Registration</a>
+        <a href="">Patent Registration</a>
+        <a href="">Trademark Objection</a>
+        <a href="">Trademark Assignment</a>
+        <a href="">80G and 12A Registration</a>
+        <a href="">Section 8 Company Registration</a>
+      </div>
+
+      <div class="tax">
+        <h4>TAX & FINANCIAL</h4>
+        <a href="">GST Registration</a>
+        <a href="">GST Return Filing</a>
+        <a href="">TDS Return Filing</a>
+        <a href="">Professional Tax Registration</a>
+        <a href="">Secretarial Audit</a>
+        <a href="">Due Diligence</a>
+        <a href="">Income Tax Return Filing</a>
+        <a href="">Business Plan</a>
+      </div>
+
+      <div class="compliance">
+       <h4>COMPLIANCE</h4>
+       <a href="">Annual Compliance of a Pvt. Ltd. Company</a>
+       <a href="">Annual Filing for LLP</a>
+       <a href="">Event Based Compliances in a Company</a>
+       <a href="">Change in Object Clause</a>
+       <a href="">Appointment and Resignation of Directors</a>
+       <a href="">Change in Name Clause</a>
+      </div>
+    </div>
+
+    <div class="footer_end">
+      <a href="">About us</a>
+      <a href="">Pay Now</a>
+      <a href="">Learning</a>
+      <a href="">Privacy Policy</a>
+      <a href="">Refund Policy</a>
+      <a href="">Terms & Condition</a>
+      <a href="">Contact us</a>
+    </div>
+
+    <p>All Right Reserved &#169; Enterslice Private Limited</p>
+    
   </div>
 
 
