--- a/subaa.html
+++ b/subaa.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Corpbiz</title>
 
     <link rel="stylesheet" href="./styles/subaa.css">
-<link rel="stylesheet" type="text/css" href="./styles/slick.css"/>
-<!-- <link rel="stylesheet" type="text/css" href="./styles/slick-theme.css"/> -->
-
+    <link rel="stylesheet" type="text/css" href="./styles/slick.css"/>
     <link rel="stylesheet" href="./styles/subaa.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
+
 <body>
     <nav>
         <div class="header">
@@ -502,13 +503,13 @@
                     <div class="info">
                         <div class="header">
                             <img src="./assets/images/photo-6.jpg" alt="">
-                            <h3>Pankaj Tyagi</h3>
+                            <h3> Pankaj Tyagi</h3>
                             <h4>|</h4>
                             <p>Date: 17 May, 2022</p>
                         </div>
                         <div class="content">
                             <button>Trade</button>
-                            <h1>how to get trade licence easily in india?</h1>
+                            <h1>how to get trade licence easily in...</h1>
                             <p>read more...</p>
                         </div>
                     </div>
@@ -521,13 +522,13 @@
                     <div class="info">
                         <div class="header">
                             <img src="./assets/images/photo-6.jpg" alt="">
-                            <h3>Pankaj Tyagi</h3>
+                            <h3> Pankaj Tyagi</h3>
                             <h4>|</h4>
                             <p>Date: 17 May, 2022</p>
                         </div>
                         <div class="content">
                             <button>eating house licence</button>
-                            <h1>delhi police eating house licence: documentation and pr...</h1>
+                            <h1>delhi police eating house licence: </h1>
                             <p>read more...</p>
                         </div>
                     </div>
@@ -565,7 +566,7 @@
                         </div>
                         <div class="content">
                             <button>pollution control board</button>
-                            <h1>CBCP producer responsibility organization</h1>
+                            <h1>CBCP producer responsibility.. </h1>
                             <p>read more...</p>
                         </div>
                     </div>
