--- a/suganya.html
+++ b/suganya.html
@@ -318,24 +318,24 @@
     </div>
     <div class="registration_box">
         <img src="/asset/images/team_registration.svg">
-        <h5>Limited Liability Partnership</h5>
-        <p>The word LLP holds immense significance in the corporate world and refers to Limited
-           Liability Partn..</p>
+        <h5>Private Limited Company Registration</h5>
+        <p>A Private Limited Company is a privately maintained small business existence, which 
+          is one of the..</p>
         <button>Get Started</button>
     </div>
     <div class="registration_box">
         <img src="/asset/images/team_registration.svg">
-        <h5>One Person Company Registration</h5>
-        <p>The One Person Company is a company that has only one person as a member, as stated 
-          under the sect..</p>
+        <h5>Indian Subsidiary Company Registration</h5>
+        <p>If you want to get a legal status, borrow funds, bring FDI Investments, and get a 
+          perpetual succes..</p>
         <button>Get Started</button>
 
     </div>
     <div class="registration_box">
         <img src="/asset/images/team_registration.svg">
-        <h5>Sole Proprietorship Registration</h5>
-        <p>A sole proprietorship is a convenient and simplified way to commence a business in 
-          India. In a sol..</p>
+        <h5>One Person Company Registration</h5>
+        <p>The One Person Company is a company that has only one person as a member, as stated
+           under the sect..</p>
         <button>Get Started</button>
       </div>
     </div>
@@ -377,6 +377,7 @@
   <div class="partner">
     <h2>Our Network Partners</h2>
   </div>
+
 
 
 
