app slider create

--- a/suganya.html
+++ b/suganya.html
@@ -378,6 +378,45 @@
     <h2>Our Network Partners</h2>
   </div>
 
+  <div class="apps_wrapper myapps">
+    <div class="apps">
+      <div class="app_slider">
+        <img src="/asset/images/stripe.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/spinny.png" >
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/milton.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/marg-logo.png">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/karpagam.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/justdial.jpg" >
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/foodpanda.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/fia-global.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/dhfl.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/bank-of-maharastra.jpg">
+      </div>
+      <div class="app_slider">
+        <img src="/asset/images/30fbric.jpg">
+      </div>
+      
+
+    </div>
+  </div>
 
 
 
@@ -485,7 +524,7 @@
 
 
 
-
+     
 
       <script src="./style/suganya.js"></script>
   </body>
