articles card create

--- a/suganya.html
+++ b/suganya.html
@@ -407,6 +407,63 @@
     <h1>Visit Our<span> Articles</span></h1>
   </div>
 
+  <div class="articles">
+    <div class="articles_card">
+      <img src="/asset/images/priyanka_profile.jpg"><span>Priyanka Bajpayee | Date: 19 May, 2022</span>>
+       <div>
+        <button>Compliances</button>
+       </div>
+      <h3>Audit Committee of Board of a Company: An Outlook</h3>
+      <p>Read More...</p>
+    </div>
+    <div class="articles_card">
+      <img src="/asset/images/sushree_profile.jpg"><span>Sushree Dash | Date: 19 May, 2022</span>
+       <div>
+        <button>Factory License</button>
+       </div>
+      <h3>An Overview of License for Plywood Factory in UP</h3>
+      <p>Read More...</p>
+    </div>
+    <div class="articles_card">
+      <img src="/asset/images/shambhavi_profile.jpg"><span>Shambhavi Suyesha | Date: 19 May, 2022</span>
+      <div>
+       <button>Waste management</button>
+      </div>
+      <h3>Importance of E-waste recycling business plan</h3>
+      <p>Read More...</p>
+    </div>
+    <div class="articles_card">
+      <img src="/asset/images/pankaj_profile.jpg"><span>Pankaj Tyagi | Date: 19 May, 2022</span>
+      <div>
+       <button>BIS Registration</button>
+      </div>
+      <h3>BIS Standards for the Drinking Water: A Complete Overvi...</h3>
+      <p>Read More...</p>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
   <div class="footer_content">
