day-six task completed

--- a/subaa.html
+++ b/subaa.html
@@ -678,6 +678,12 @@
 
 
 
+    <section>
+        <div class="button-fixed">
+            <button><i class="fa-solid fa-arrow-up"></i></button>
+        </div>
+    </section>
+
 
 
 
