bottom bar finished

--- a/suganya.html
+++ b/suganya.html
@@ -448,6 +448,16 @@
   </div>
 
 
+  <div class="bottom_bar">
+    <h1>Transform your Business.<br> Subscribe our Newsletter.</h1>
+    <div class="subscribe">
+      <input type="email" class="mail" placeholder="Enter Your Email">
+      <button>SUBSCRIBE</button>
+    </div>
+
+  </div>
+
+
 
 
 
