latest news alignment

--- a/suganya.html
+++ b/suganya.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="./styles/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="style/slick.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
 
 
@@ -469,11 +469,11 @@
       </div>
     </div>
 
-    <div class="latest_news">
+    <div class="latest_news" style="flex-direction:column;">
       <div class="heading">
         <h2>Latest News</h2>
       </div>
-      <div class="news_slider">
+      <div class="star_slide latest_news_slider">
         <div class="slide">
           <h3>Neo-banking platform SaveIN raises funds in extended pre-seed funding round</h3>
           <p>Read More...</p>
@@ -502,26 +502,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="visit_line">
+<div class="visit_line">
     <h1>Visit Our<span> Articles</span></h1>
   </div>
 
@@ -650,9 +631,9 @@
 
 
   <script src="./style/suganya.js"></script>
-  <script type="text/javascript" src="./styles/slick.min.js"></script>
+  <script type="text/javascript" src="/style/slick.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="./styles/slick.min.js"></script>
+  
   
 
   </body>
