scroll smooth finished

--- a/suganya.html
+++ b/suganya.html
@@ -25,6 +25,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
+
+    <div class="headphone_icon">
+      <a href="" class="headphone_round">
+        <i class="fa-solid fa-headphones-simple"></i>
+      </a>
+    </div>
+
+    
+
+
+    <a href="#" class="scroller_top">
+      <i class="fa-solid fa-arrow-up"></i>
+    </a>
     
     <div class="navbar_brand">
       <div class="logo">
@@ -549,14 +562,26 @@
   </div>
 
 
-  <div class="bottom_bar">
-    <h1>Transform your Business.<br> Subscribe our Newsletter.</h1>
-    <div class="subscribe">
-      <input type="email" class="mail" placeholder="Enter Your Email">
-      <button>SUBSCRIBE</button>
+  <div class="news_letter">
+    <div class="news">
+        <h1>Transform your Business. Subscribe our Newsletter.</h1>
     </div>
-
+    <div class="email">
+        <input type="text" placeholder="Enter Your Email">
+        <button>Subscribe</button>
+    </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
