--- a/suganya2.html
+++ b/suganya2.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration</title>
     <link rel="stylesheet" href="/style/suganya.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -202,7 +202,6 @@
       </div>
     </div>
 
-    <!-- search box start -->
     <div class="search_second">
       <div class="bcg_colour">
         <div class="input">
@@ -214,8 +213,6 @@
         </div>
       </div>
     </div>
-
-    <!-- search box end -->
 
     <div class="content_box_list">
       <div class="content_box">
